--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ social:
     url: https://www.facebook.com/Townbee.Enactus
   - title: github
     url: http://github.com/townbee
+  - title: instagram
+    url: https://www.instagram.com/townbee_enactus/
 
 collections:
     team:
