Update Instagram url

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ social:
   - title: github
     url: http://github.com/townbee
   - title: instagram
-    url: https://www.instagram.com/townbee_enactus/
+    url: https://www.instagram.com/townbee.enactus/
 
 collections:
     team:
